Fix css for navbar right dropdown menu contrast issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -87,33 +87,11 @@ a a:hover {
     background-color:grey;
 }
 
-.dropdown-item a:hover {
-    color: hotpink;
-    background-color: hotpink;
+.dropdown-menu > .dropdown-menu.active, .dropdown-item:hover,
+.dropdown-menu > .dropdown-menu.active, .dropdown-item:active {
+    background-color: grey;
 }
 
-ul.nav a:hover {
-    color: hotpink!important;
-}
-
-.dropdown-item a:hover {
-    color: hotpink;
-}
-
-.nav-item .dropdown a:hover {
-    color: hotpink;
-    background: green;
-    background-color: yellow;
-}
-
-
-/* nav .navbar-nav li a {
-    color: green;
-} */
-
-.navbarDropdown.nav-link.dropdown-toggle {
-    
-}
 
 /* home page carousel */
 
